codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 65
expression: popup
---
  Update Approvals

› 1. Ask Me (current)  Ask before approval-required actions and route requests
                       to you.
  2. Never Ask, Deny   Reject approval-required actions instead of showing a
                       prompt.
  3. Auto Approve      Treat approval-required actions as approved without a
                       prompt.

  Press enter to confirm or esc to go back
