codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 8586
expression: combined
---
• Running SessionStart hook: warming the shell

SessionStart hook (completed): warming the shell
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
