codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_start_hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests/helpers.rs
assertion_line: 1062
expression: combined
---
• SessionStart hook (completed): warming the shell
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
